Make the s3 presigned urls endpoint accept eventslug and photographerslug. Move the creation of the full s3 key to the backend. Add eventSlug to the photo upload path on the UI.

--- a/frontend/src/app/pages/photographer/photographer-page.component.html
+++ b/frontend/src/app/pages/photographer/photographer-page.component.html
@@ -4,7 +4,7 @@
     <p class="lead">Upload, automate matching, and monetize your event photos.</p>
 
     <p>
-      <a class="btn primary" routerLink="/photographer/upload">Start uploading photos</a>
+      <a class="btn primary" [routerLink]="['/photographer/upload', 'your-event-slug']">Start uploading photos</a>
     </p>
 
     <ol class="steps">
