--- a/frontend/src/app/pages/admin/events/photos/event-photos-page.component.html
+++ b/frontend/src/app/pages/admin/events/photos/event-photos-page.component.html
@@ -43,7 +43,7 @@
 
       <div class="loading" *ngIf="loading()">
         <div class="spinner"></div>
-        <p>Loading prefixes…</p>
+        <p>Loading…</p>
       </div>
     </div>
   </div>
